[build-system]
requires = ["maturin>=1.3.0"]
build-backend = "maturin"

[project]
name="multimorbidity_hypergraphs"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]