[metadata]
name = multimorbidity_hypergraphs
version = 0.2.1
author = Jim Rafferty
author_email = j.m.rafferty@swansea.ac.uk
description = A toolbox for large scale data analysis using hypergraphs
long_description = file: README.md
long_description_content_type: text/markdown
url = https://github.com/jim-rafferty/multimorbidity_hypergraphs
project_urls = 
    Bug Tracker = https://github.com/jim-rafferty/multimorbidity_hypergraphs/issues
classifiers = 
    Programming Language :: Python :: 3
    Licence :: OSI Approved :: GPLv3 Licence
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.5
install_requires = 
    numpy
    scipy
    numba
